--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tailwind": "NODE_ENV=production pnpx tailwindcss-cli build ./styles.css -o ./static/index.css",
-    "tailwind:dev": "pnpx tailwindcss-cli build ./styles.css -o ./assets/css/index.css",
+    "tailwind": "NODE_ENV=production yarn tailwindcss-cli build ./styles.css -o ./static/index.css",
+    "tailwind:dev": "yarn tailwindcss-cli build ./styles.css -o ./assets/css/index.css",
     "start": "hugo serve -D",
-    "build": "rimraf public && pnpm tailwind && hugo"
+    "build": "rimraf public && yarn tailwind && hugo"
   },
   "repository": {
     "type": "git",
