--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "NODE_ENV=production yarn tailwindcss-cli build ./styles.css -o ./static/index.css",
-    "tailwind:dev": "yarn tailwindcss-cli build ./styles.css -o ./assets/css/index.css",
+    "tailwind:dev": "yarn tailwindcss-cli build ./styles.css -o ./static/index.css",
     "start": "hugo serve -D",
     "build": "rimraf public && yarn tailwind && hugo"
   },
