--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tailwind": "NODE_ENV=production yarn tailwindcss-cli build ./styles.css -o ./static/index.css",
     "tailwind:dev": "yarn tailwindcss-cli build ./styles.css -o ./static/index.css",
     "start": "hugo serve -D",
-    "build": "rimraf public && yarn tailwind && hugo"
+    "build": "pnpm syntax && rimraf public && yarn tailwind && hugo",
+    "syntax": "hugo gen chromastyles --style=native > syntax.css"
   },
   "repository": {
     "type": "git",
