Switch syntax style in config

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ markup:
       unsafe: true
   highlight:
     guessSyntax: false
-    style: swapoff
+    style: native
 
 params:
   author: John Pangalos
