--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
-  "name": "blog.pangalos.dev",
-  "version": "1.0.0",
+  "private": true,
+  "name": "remix-app-template",
   "description": "",
-  "main": "index.js",
+  "license": "",
   "scripts": {
-    "start": "hugo serve -D",
-    "build": "hugo gen chromastyles --style=native > assets/css/syntax.css && rimraf public && hugo"
+    "build": "cross-env NODE_ENV=production run-s build:css build:remix",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "build:remix": "remix build",
+    "dev": "cross-env NODE_ENV=development run-p dev:*",
+    "postinstall": "remix setup cloudflare-pages",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "dev:remix": "remix watch",
+    "dev:wrangler": "NODE_NO_WARNINGS=1 pnpm esmo ./scripts/dev-wrangler.ts",
+    "start": "npm run dev:wrangler"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JohnPangalos/blog.pangalos.dev.git"
-  },
-  "author": "",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/JohnPangalos/blog.pangalos.dev/issues"
-  },
-  "homepage": "https://github.com/JohnPangalos/blog.pangalos.dev#readme",
   "dependencies": {
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.5",
-    "postcss-import": "^14.0.0",
-    "prettier": "^2.2.1",
-    "prettier-plugin-go-template": "^0.0.10",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^2.0.4",
-    "tailwindcss-cli": "^0.1.2"
+    "@remix-run/cloudflare-pages": "^1.1.3",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/server-runtime": "^1.2.2",
+    "clsx": "^1.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
+    "remix": "^1.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.8",
-    "postcss": "^8.2.8",
-    "postcss-cli": "^8.3.1"
-  }
+    "@cloudflare/workers-types": "^3.2.0",
+    "@remix-run/dev": "^1.1.3",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "esbuild": "0.13.14",
+    "eslint": "^8.9.0",
+    "esno": "^0.14.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.1.2",
+    "wrangler": "alpha"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "sideEffects": false,
+  "main": "dist/worker.js"
 }
