--- a/package.json
+++ b/package.json
@@ -1,52 +1,37 @@
 {
-  "private": true,
-  "name": "remix-app-template",
-  "description": "",
-  "license": "",
-  "scripts": {
-    "build": "cross-env NODE_ENV=production run-s build:css build:remix",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "build:remix": "remix build",
-    "dev": "cross-env NODE_ENV=development run-p dev:*",
-    "postinstall": "remix setup cloudflare-pages",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "dev:remix": "remix watch",
-    "dev:wrangler": "NODE_NO_WARNINGS=1 pnpm esmo ./scripts/dev-wrangler.ts",
-    "start": "npm run dev:wrangler"
-  },
-  "dependencies": {
-    "@remix-run/cloudflare-pages": "^1.1.3",
-    "@remix-run/react": "^1.1.3",
-    "@remix-run/server-runtime": "^1.2.2",
-    "clsx": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
-    "remix": "^1.1.3"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^3.2.0",
-    "@remix-run/dev": "^1.1.3",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "autoprefixer": "^10.4.2",
-    "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0",
-    "esbuild": "0.13.14",
-    "eslint": "^8.9.0",
-    "esno": "^0.14.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.6",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.1.2",
-    "wrangler": "alpha"
-  },
-  "engines": {
-    "node": ">=14"
-  },
-  "sideEffects": false,
-  "main": "dist/worker.js"
+	"name": "blog-svelte",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.28",
+		"@sveltejs/kit": "^1.0.0-next.283",
+		"@tailwindcss/typography": "^0.5.2",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.2",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"mdsvex": "^0.10.5",
+		"postcss": "^8.4.6",
+		"prettier": "^2.5.1",
+		"prettier-plugin-tailwindcss": "^0.1.7",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.1",
+		"tailwindcss": "^3.0.23",
+		"tslib": "^2.3.1",
+		"typescript": "~4.5.4"
+	},
+	"type": "module"
 }
