--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-cloudflare": "^0.0.1",
+		"@sveltejs/adapter-cloudflare": "^1.0.0-next.15",
 		"@sveltejs/adapter-static": "^1.0.0-next.28",
 		"@sveltejs/kit": "^1.0.0-next.283",
 		"@tailwindcss/typography": "^0.5.2",
