--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-cloudflare": "^1.0.0-next.15",
+		"@sveltejs/adapter-auto": "^1.0.0-next.34",
+		"@sveltejs/adapter-cloudflare": "^1.0.0-next.17",
 		"@sveltejs/adapter-static": "^1.0.0-next.29",
-		"@sveltejs/kit": "^1.0.0-next.295",
+		"@sveltejs/kit": "^1.0.0-next.310",
 		"@tailwindcss/typography": "^0.5.2",
-		"@typescript-eslint/eslint-plugin": "^5.14.0",
-		"@typescript-eslint/parser": "^5.14.0",
-		"autoprefixer": "^10.4.2",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
+		"autoprefixer": "^10.4.4",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"mdsvex": "^0.10.5",
-		"postcss": "^8.4.8",
-		"prettier": "^2.5.1",
+		"postcss": "^8.4.12",
+		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.8",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.4",
+		"svelte": "^3.47.0",
+		"svelte-check": "^2.6.0",
+		"svelte-preprocess": "^4.10.5",
 		"tailwindcss": "^3.0.23",
 		"tslib": "^2.3.1",
 		"typescript": "~4.5.4"
