--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-	"name": "blog-svelte",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.37",
-		"@sveltejs/adapter-cloudflare": "^1.0.0-next.18",
-		"@sveltejs/adapter-static": "^1.0.0-next.29",
-		"@sveltejs/kit": "^1.0.0-next.320",
-		"@tailwindcss/typography": "^0.5.2",
-		"@typescript-eslint/eslint-plugin": "^5.20.0",
-		"@typescript-eslint/parser": "^5.20.0",
-		"autoprefixer": "^10.4.4",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^3.4.1",
-		"mdsvex": "^0.10.5",
-		"postcss": "^8.4.12",
-		"prettier": "^2.6.2",
-		"prettier-plugin-tailwindcss": "^0.1.10",
-		"svelte": "^3.47.0",
-		"svelte-check": "^2.7.0",
-		"svelte-preprocess": "^4.10.6",
-		"tailwindcss": "^3.0.24",
-		"tslib": "^2.4.0",
-		"typescript": "~4.5.4"
-	},
-	"type": "module"
+  "name": "blog-svelte",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "1.0.0-next.44",
+    "@sveltejs/adapter-cloudflare": "1.0.0-next.19",
+    "@sveltejs/adapter-static": "1.0.0-next.31",
+    "@sveltejs/kit": "1.0.0-next.338",
+    "@tailwindcss/typography": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
+    "mdsvex": "^0.10.6",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.2",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.3",
+    "tslib": "^2.4.0",
+    "typescript": "~4.5.4"
+  },
+  "type": "module"
 }
