--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "blog-svelte",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "dev": "vite dev",
+    "build": "vite build",
+    "package": "vite package",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.44",
-    "@sveltejs/adapter-cloudflare": "1.0.0-next.19",
-    "@sveltejs/adapter-static": "1.0.0-next.31",
-    "@sveltejs/kit": "1.0.0-next.338",
+    "@sveltejs/adapter-auto": "1.0.0-next.61",
+    "@sveltejs/adapter-cloudflare": "1.0.0-next.29",
+    "@sveltejs/adapter-static": "1.0.0-next.36",
+    "@sveltejs/kit": "1.0.0-next.377",
     "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "^7.32.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
+    "eslint-plugin-svelte3": "^4.0.0",
     "mdsvex": "^0.10.6",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
@@ -32,7 +32,8 @@
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.3",
     "tslib": "^2.4.0",
-    "typescript": "~4.5.4"
+    "typescript": "~4.7.4",
+    "vite": "3.0.0"
   },
   "type": "module"
 }
