--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@sveltejs/adapter-auto": "1.0.0-next.61",
     "@sveltejs/adapter-cloudflare": "1.0.0-next.29",
     "@sveltejs/adapter-static": "1.0.0-next.36",
-    "@sveltejs/kit": "1.0.0-next.405",
+    "@sveltejs/kit": "1.0.0",
     "@tailwindcss/typography": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
@@ -27,13 +27,16 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^2.0.1",
+    "rehype-slug": "^5.1.0",
     "svelte": "^3.55.0",
     "svelte-check": "^2.10.3",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "~4.7.4",
-    "vite": "3.0.0"
+    "vite": "4.0.4"
   },
   "type": "module"
 }
