--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.61",
-    "@sveltejs/adapter-cloudflare": "1.0.0-next.29",
-    "@sveltejs/adapter-static": "1.0.0-next.36",
+    "@sveltejs/adapter-auto": "1.0.2",
+    "@sveltejs/adapter-cloudflare": "1.1.0",
+    "@sveltejs/adapter-static": "1.0.5",
     "@sveltejs/kit": "1.0.0",
     "@tailwindcss/typography": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
