--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "typescript": "~4.7.4",
     "vite": "4.0.4"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
 }
